--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    
+    // ONNX Runtime pour Piper TTS
+    implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.16.0'
 }
 
 apply from: 'capacitor.build.gradle'
